# pyroll-wusatowski-spreading

./: LICENSE  README.md  hatch.toml  pyproject.toml
docs/: docs.tex  equivalent_rectangle.dxf  model.md  model.tex  refs.bib  usage.md  usage.tex
pyroll/: wusatowski_spreading.py
pyroll/wusatowski_spreading/: __init__.py  hookimpls.py  hookspecs.py
pyroll_wusatowski_spreading/: __init__.py  hookimpls.py  hookspecs.py  lib.py
tests/: config.yaml  test_solve.py  test_solve3.py  test_solve_pillar.py
