[tool.poetry]
name = "pyroll-wusatowski-spreading"
version = "1.0.0"
description = "Plugin for PyRoll providing the Wusatowski spreading model."
authors = [
    "Max Weiner <max.weiner@imf.tu-freiberg.de>",
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-wusatowski-spreading"
documentation = "https://github.com/pyroll-project/pyroll-wusatowski-spreading/blob/main/docs/docs.pdf"
packages = [
    { include = "wusatowski_spreading", from = "pyroll" }
]


[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyroll = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyroll = { git = "https://github.com/pyroll-project/pyroll-core", branch = "main", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
